Part9/Q.1/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: project-a
    labels: 
      namespace: project-a
---
apiVersion: v1
kind: Namespace
metadata:
    name: project-b
    labels: 
      namespace: project-b
---
apiVersion: v1
kind: Namespace
metadata:
    name: project-c
    labels: 
      namespace: project-c
