Part9/Q.1/ns-a-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: project-a
spec:
  selector:
    matchLabels:
      tier: db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        tier: db
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        resources: {}
